--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 button {
 	cursor: pointer;
-	background-color: green;
+	background-color: red;
 	color: white;
 	border: none;
 	padding: 7px;
@@ -35,7 +35,7 @@ button {
 
 #todo-list {
 	list-style-type: none;
-	height: 450px;
+	height: 400px;
 	padding: 0;
 	margin: 0;
 	overflow-y: scroll;
@@ -48,7 +48,8 @@ button {
 	border: 1px solid rgb(228, 226, 226);
 	width: 75%;
 	margin: 4px auto;
-	padding: 5px;
+	padding: 3px;
+	border-radius: 0.625rem;
 }
 
 .single-todo-text {
